testsuite/lab2-testsuite/good/branch_value_leaks.cc
int main () {
	let int x0 = 0 ;
	if (false) 0;
	else bool x0 = true ;
	let int x1 = x0 -- ;

	return 0;
}
